<resources>
    <string name="app_name">autismProject</string>
    <string name="Category">Category</string>
    <string name="add_object">add new object</string>
    <string name="add_object_existing">add existing object</string>
    <string name="choose_bakghround">choose background</string>
    <string name="choose_language">choose language</string>
    <string name="view_score">view score</string>
    <string name="play">play</string>
    <string name="settings">settings</string>
    <string name="level1">level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>
    <string name="anglais">english</string>
    <string name="francais">french</string>
    <string name="arabe">arabic</string>
    <string name="ok">ok</string>
    <string name="Description">Description</string>
    <string name="Categories">Categories</string>
    <string name="Answer">Answer</string>
    <string name="Question">Question</string>
    <string name="click">Click here to open file manager explorer and pick any file</string>
    <string name="next_Level">next level</string>
    <string name="finish">finish</string>
    <string name="object_list">Object List</string>
    <string name="boy">boy</string>
    <string name="girl">girl</string>
    <string name="aboutus">This game aims to help autistic children recognize the object and direct the hand to a recognized object to learn directions. You must first add the objects by specifying the category, and each category must contain at least 4 objects if you mistakenly delete an object , you can retrieve it by adding an existing object and select the json file having the same name and category</string>
    <string name="abtus">about the game</string>
    <string name="add_son">add sound</string>
</resources>
